Fixed tweet/fb image and alignment
Addresses #165

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,14 @@ ul#newsContent {
 }
 
 /* ==========================================================================
+   FB fix page
+   ========================================================================== */
+
+.fb-share-button {
+   vertical-align: top;    
+}
+   
+/* ==========================================================================
    Testimonials page
    ========================================================================== */
 
